# vermilionrc

./: Cargo.toml  LICENSE-MIT  README.md  copyright.txt
.github/workflows/: test.yml
src/: control.rs  error.rs  fork.rs  lib.rs  lion.rs  msg.rs  pipe.rs
src/procs/: ipc.rs  launcher.rs  leader.rs  logger.rs  mod.rs  supervisor.rs
