[package]
name = "vermilionrc"
version = "0.0.0-unreleased"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = """
A safe and reliable process manager. The name is derived from the color of paint that is often used as a protective coating on Rust, i.e. this can be used to help protect and run Rust binaries, or any binary.
"""

repository = "https://github.com/bluejekyll/vermilion"
readme = "README.md"
license = "MIT/Apache-2.0"

[[bin]]
name = "vermilion"
path = "src/bin/vermilion.rs"

[dependencies]
futures = "0.3.1"
nix = "0.16.1"
tokio = { version = "0.2.4", no-default-features = true, features = ["process"] }