[package]
name = "vermilionrc"
version = "0.0.0-unreleased"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = """
A safe and reliable process manager. The name is derived from the color of paint that is often used as a protective coating on Rust, i.e. this can be used to help protect and run Rust binaries, or any binary.
"""

repository = "https://github.com/bluejekyll/vermilion"
readme = "README.md"
license = "MIT/Apache-2.0"

[[bin]]
name = "vermilion"
path = "src/bin/vermilion.rs"

[dependencies]
async-trait = "0.1.22"
bincode = "1.2.1"
clap = "2.33"
futures = "0.3.1"
libc = "0.2.66"
mio = "0.6.21"
mio-uds = "0.6.7"
nix = "0.16.1"
serde ={ version = "1.0.104", features = ["derive"] } 
thiserror = "1.0.9"
tokio = { version = "0.2.4", default-features = false, features = ["fs", "io-util", "process", "rt-core", "rt-util", "time", "uds"] }